[PACA-263] Initial FHIR 0.1+ fiss implementation